fix: dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -65,7 +65,7 @@
 }
 
 .tk-footer {
-    @apply hidden
+    @apply invisible
 }
 
 body.dark .astro-code,
